# ConferenceNotes

./: README.md
2024-OMSCS/: AuditoriumNotes.md
2024-OMSCS/ROS/: ROSNotes.md
2024-OMSCS/TerraformDemo/: README.md  README.txt  main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
CppAcademy2024/: .gitignore  ModernCppEfficiencyFertig.md  initial-check.cpp
CppAcademy2024/code-samples/: CMakeLists.txt
CppAcademy2024/code-samples/exercisesModified/: a.out  exClassMemberDefaultInit.cpp  exConstexprApply.cpp  exFlatMap.cpp  exLambdaCapture.cpp  exLambdaUB.cpp  exMemoryAccess.cpp  exMoveSemantics.cpp  exUniformInit.cpp  exUniformInit2.cpp  exUniquePtrCosts.cpp  exUniquePtrWithCustomDeleter.cpp  exVariadicTemplateSum.cpp  exVariadicTemplateSumSameType.cpp
CppAcademy2024/code-samples/exercisesOriginal/: exLambdaUB.cpp  exMoveSemantics.cpp  exSharedPtrSize.cpp  exSimpleList.cpp  exUniformInit.cpp
CppAcademy2024/code-samples/slide-code/: CMakeLists.txt  appendAndRefQualifiers0.cpp  appendAndRefQualifiers1.cpp  bracedInit0.cpp  bracedInit1.cpp  comparisonRecursionVsFoldExpression0.cpp  comparisonRecursionVsFoldExpression1.cpp  comparisonRecursionVsFoldExpression2.cpp  conceptsSubsumeVsConstexprIf0.cpp  conceptsSubsumeVsConstexprIf1.cpp  constexprFixedString0.cpp  correctForward0.cpp  ctad0.cpp  ctadOrMakeFunctions0.cpp  ctorInheritance0.cpp  defaultMemberInit0.cpp  defaultedDtorAndMove0.cpp  demoInsights0.cpp  externTemplate0.cpp  final1.cpp  final5.cpp  foldExpression0.cpp  foldExpression1.cpp  forLoop0.cpp  foreach0.cpp  foreach5.cpp  genericLambdas0.cpp  ifSwitchInit0.cpp  integralConstant0.cpp  lambda7.cpp  lambdaUse0.cpp  lambdaUse1.cpp  lambdaVariants0.cpp  moveAndVirtual0.cpp  moveAndVirtual1.cpp  moveSemantics0.cpp  moveVsCopy0.cpp  moveVsCopy1.cpp  noexcept2.cpp  noexcept3.cpp  (+35 more)
CppAcademy2024/code-samples/solutions/: solClassMemberDefaultInit.cpp  solConstexprApply.cpp  solCtorInheritance.cpp  solFlatMap.cpp  solInitializerList2.cpp  solInitializerList3.cpp  solLambdaCapture.cpp  solLambdaUB.cpp  solMoveSemantics.cpp  solRangeBasedForLoop.cpp  solSharedPtrSize.cpp  solSimpleList.cpp  solTypeTraitsAssert.cpp  solUniformInit.cpp  solUniformInit2.cpp  solUniquePtr.cpp  solUniquePtrCosts.cpp  solUniquePtrWithCustomDeleter.cpp  solUniquePtrWithCustomDeleterEfficient.cpp  solVariadicTemplateSum.cpp  solVariadicTemplateSumConstexpr.cpp  solVariadicTemplateSumSameType.cpp
CppCon/: 2023CppConFreeFriday.md  2024CppConConferenceNotes.md
CppCon/CppAcademy2024/: a.out
CppCon/CppConference2024/: 2024CppConConferenceNotes.md  2024PostCppConNotes.md
LocalColoradoTechTalks/: AITalks.md  CppMonthly.md
Webinars/: MedDeviceTalks.md
